fix: z-index for laser pointer to be able to draw on embeds and such

--- a/packages/excalidraw/components/SVGLayer.scss
+++ b/packages/excalidraw/components/SVGLayer.scss
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
 
-    z-index: 2;
+    z-index: 3;
 
     & svg {
       image-rendering: auto;
